--- a/manifest.json
+++ b/manifest.json
@@ -15,5 +15,5 @@
 	"action": {
 		"default_popup": "index.html"
 	},
-	"permissions": ["scripting", "activeTab"]
+	"permissions": ["scripting", "activeTab", "storage"]
 }
